examples/test/testpolicy18945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18945
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key26: value16
      key43: value44
      key25: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value45
          key48: value27
          key38: value46
      podSelector:
        matchLabels:
          key12: value24
          key46: value44
          key26: value37
